--- a/Finsys/Finsys_App/templates/company/Fin_base.html
+++ b/Finsys/Finsys_App/templates/company/Fin_base.html
@@ -135,30 +135,90 @@
               background-color: #213b52;width:550px;height:1px;">
 
                 <ul id="myList" class="one" style="background-color: #213b52;">
-                  <li><a href="">Dashboard</a></li>
-                  <li><a href="">Item</a></li>
+                  <li><a href="{% url 'Fin_Com_Home' %}">Dashboard</a></li>
+                  
+                  <li><a href="{% url 'Fin_Staff_Req' %}">Staff Requests</a></li>
+                  <li><a href="{% url 'Fin_All_Staff' %}">All Staff</a></li>
+
+                  <li><a href="{% url 'Fin_items' %}">Item</a></li>
+                  <li><a href="{% url 'Fin_priceList' %}">Price Lists</a></li>
+                  <li><a href="{% url 'StockAdjustment' %}">Stock Adjustments</a></li>
+
                   <li><a href="">Online Banking</a></li>
                   <li><a href="">Bank Reconcilation</a></li>
+                  <li><a href="">Reconcile</a></li>
+                  <li><a href="">Cash Position</a></li>
+                  <li><a href="{% url 'Fin_banking_listout' %}">Offline Banking</a></li>
+                  <li><a href="{% url 'Fin_bankholder' %}">Bank Holders</a></li>
+                  <li><a href="{% url 'Fin_cashInHand' %}">Cash In Hand</a></li>
+                  <li><a href="{% url 'Fin_cheques' %}">Cheques</a></li>
+                  <li><a href="{% url 'loan_ac_listoutpage' %}">Loan Account</a>
+                  <li><a href="{% url 'Fin_upiPayments' %}">UPI</a></li>
+
                   <li><a href="">Sales Records</a></li>
-                  <li><a href="">Invoices</a></li>
-                  <li><a href="">Customers</a></li>
-                  <li><a href="">Product and Services</a></li>
-                  <li><a href="">Expenses</a></li>
                   <li><a href="">Suppliers</a></li>
-                  <li><a href="">Chart of Accounts</a></li>
-                  <li><a href="">Reconcile</a></li>
-                  <li><a href="">Cash Position</a></li>
-                  <li><a href="">Reconcile</a></li>
-                  <li><a href="">Cash Position</a></li>
-                  <li><a href="">Vendor</li>
-                  <li><a href="">Purchase Order</li>
-                  <li><a href="">Bill</li>
-                  <li><a href="">Cash In Hand</a></li>
-                  <li><a href="">Offline Banking</a></li>
-                  <li><a href="">Loan Account</a>
-                    <li><a href="">Sales</a></li>                   
-                  <li><a href="">Employee</a></li>
-                  <li><a href="">Employee Loan</a></li>
+                  <li><a href="">Product and Services</a></li>
+                  <li><a href="{% url 'Fin_customers' %}">Customers</a></li>
+                  <li><a href="{% url 'Fin_estimates' %}">Estimate</a></li>
+                  <li><a href="{% url 'Fin_salesOrder' %}">Sales Order</a></li>
+                  <li><a href="{% url 'Fin_invoice' %}">Invoices</a></li>
+                  <li><a href="">Credit Note</a></li>
+                  <li><a href="{% url 'Fin_view_payment_received' %}">Payments Received</a></li>
+                  <li><a href="{% url 'Fin_RET_INV_Listout' %}">Retainer Invoices</a></li>
+                  <li><a href="{% url 'deliverylist' %}">Delivery Challan</a></li>
+                  <li><a href="{% url 'Fin_recurringInvoice' %}">Recurring Invoices</a></li>
+
+                  <li><a href="{% url 'Fin_vendors' %}">Vendor</li>
+                  <li><a href="{% url 'Fin_purchaseOrder' %}">Purchase Order</li>
+                  <li><a href="{% url 'Fin_List_Purchase_Bill' %}">Bill</li>
+                  <li><a href="{% url 'Fin_expense' %}">Expenses</a></li>
+                  <li><a href="{% url 'Fin_paymentmade' %}">Payment Made</li>
+                  <li><a href="{% url 'Fin_debitnotelist' %}">Debit Note</li>
+                  <li><a href="{% url 'Fin_recurring_bill_list' %}">Recurring Bill</li>
+                  
+                  <li><a href="">Transaction Reports</li>
+                    <li><a href="">Sales</a></li>
+                      <li><a href="">Sales by Customer</li>
+                      <li><a href="">Sales by Items</li>
+                    <li><a href="">Purchase</a></li>
+                    <li><a href="">All Transactions</a></li>
+                    <li><a href="">Profit and Loss</a></li>
+                    <li><a href="">Balance Sheet</a></li>
+                    <li><a href="">Cash Flow</a></li>
+                    <li><a href="">Day Book</a></li>
+                  <li><a href="">Party</li>
+                    <li><a href="">Party Statements</a></li>
+                    <li><a href="">All Parties</a></li>
+                  <li><a href="">GST Reports</li>
+                    <li><a href="">GSTR-1</a></li>
+                    <li><a href="">GSTR-2</a></li>
+                    <li><a href="">GSTR-3B</a></li>
+                    <li><a href="">GSTR-9</a></li>
+                    <li><a href="">Sales Summary by HSN</a></li>
+                  <li><a href="">Profit and Loss</li>
+                  <li><a href="">Balance Sheet</li>
+                  <li><a href="">Trial Balance</li>
+                  <li><a href="">Accounts Receivables</li>
+                  <li><a href="">Credit Note Details</li>
+                  <li><a href="">Debit Note Report</li>
+                  <li><a href="">Accounts Payables</li>
+                  <li><a href="">Stock Summary</li>
+                  <li><a href="">Stock Valuation</li>
+                  <li><a href="">Sales Summary Report</li>
+                  <li><a href="">Purchase Order Details</li>
+                  <li><a href="">Purchase Order By Vendor</li>
+                  <li><a href="">Recurring Bill</li>
+
+                  <li><a href="{% url 'Fin_Eway_bills' %}">Eway Bills</a></li>
+
+                  <li><a href="{% url 'Fin_chartOfAccounts' %}">Chart of Accounts</a></li>
+                  <li><a href="{% url 'Fin_manualJournals' %}">Manual Journal</a></li>
+                                     
+                  <li><a href="{% url 'employee_list' %}">Employee</a></li>
+                  <li><a href="{% url 'employee_loan_list' %}">Employee Loan</a></li>
+                  <li><a href="{% url 'holiday_list' %}">Holidays</a></li>
+                  <li><a href="{% url 'Fin_Attendance' %}">Attendance</a></li>
+                  <li><a href="{% url 'Fin_salary_details' %}">Salary Details</a></li>
 
                 </ul>
               </div>
