--- a/Finsys/Finsys_App/templates/company/Fin_Add_Item.html
+++ b/Finsys/Finsys_App/templates/company/Fin_Add_Item.html
@@ -83,7 +83,7 @@
                                 <input type="number" name="hsn" class="form-control" style="background-color: #2a4964; color: white;" placeholder="Enter a valid HSN code" required id="hsnField" oninput="validateHSN()">
                                 <div id="hsnError" style="color: red;"></div>
                             </div>
-                            <div class="col-md-6 mt-3" id="sacDiv" style="display: none;">
+                            <div class="col-md-6 mt-3" id="sacDiv" hidden>
                                 <label for="sacField" style="color: white;">SAC Code</label>
                                 <input type="number" name="sac" class="form-control" style="background-color: #2a4964; color: white;" placeholder="Enter a valid SAC code" required id="sacField" oninput="validateSAC()">
                                 <div id="sacError" style="color: red;"></div>
@@ -782,6 +782,8 @@ $(document).on("click","#saveNewAccount",function(){
             if($(this).val()=== 'Goods' )
             {
                 $('#sacField').val('');
+                $('#hsnField').prop('required',true);
+                $('#sacField').prop('required',false);
                 $('#hsnDiv').show();
                 $('#sacDiv').hide();
                 $('#sacError').text('');
@@ -790,6 +792,8 @@ $(document).on("click","#saveNewAccount",function(){
             else
             {
                 $('#hsnField').val('')
+                $('#hsnField').prop('required',false);
+                $('#sacField').prop('required',true);
                 $('#sacDiv').show();
                 $('#hsnDiv').hide();
                 $('#hsnError').text('');
