--- a/Finsys/Finsys_App/templates/company/Fin_Edit_Item.html
+++ b/Finsys/Finsys_App/templates/company/Fin_Edit_Item.html
@@ -76,11 +76,17 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-md-6 mt-3">
+                            <div class="col-md-6 mt-3" id="hsnDiv">
                                 <label for="hsnField" style="color: white;">HSN Code</label>
                                 <input type="number" name="hsn" class="form-control" value="{{item.hsn}}" style="background-color: #2a4964; color: white;" placeholder="Enter a valid HSN code" required id="hsnField" oninput="validateHSN()">
                                 <div id="hsnError" style="color: red;"></div>
                             </div>
+                            <div class="col-md-6 mt-3" id="sacDiv">
+                                <label for="sacField" style="color: white;">SAC Code</label>
+                                <input type="number" name="sac" class="form-control" value="{{ item.sac }}" style="background-color: #2a4964; color: white;" placeholder="Enter a valid SAC code" required id="sacField" oninput="validateSAC()">
+                                <div id="sacError" style="color: red;"></div>
+                            </div>
+
                         </div>
                         <div class="row mt-3">
                             <div class="col-md-3 mt-3">
@@ -770,6 +776,64 @@ $(document).on("click","#saveNewAccount",function(){
         alert('Account name or Type cannot be blank.!')
     }
 });
+</script>
+
+<script>
+    $(document).ready(function(){
+        if($('#hsnField').val()!=='' && $('#hsnField').val()!=='None')
+        {
+            $('#hsnDiv').show();
+            $('#sacDiv').hide();
+            $('#hsnField').prop('required',true);
+            $('#sacField').prop('required',false);
+        }
+        else
+        {
+            $('#sacDiv').show();
+            $('#hsnDiv').hide();
+            $('#sacField').prop('required',true);
+            $('#hsnField').prop('required',false);
+        }
+    })
+    function validateSAC() {
+        var sacField = document.getElementById("sacField");
+        var errorText = document.getElementById("sacError");
+        var sacValue = sacField.value;
+
+        if (sacValue.length < 6) {
+            errorText.innerText = "SAC must contain at least 6 digits";
+            sacField.setCustomValidity("SAC must contain at least 6 digits");
+            sacField.style.borderColor = "red";
+        } else {
+            errorText.innerText = "";
+            sacField.setCustomValidity(""); 
+            sacField.style.borderColor = ""; 
+        }
+    }
+    $(document).ready(function(){
+        $('#itemType').on('input',function(){
+            if($(this).val()=== 'Goods' )
+            {
+                $('#sacField').val('');
+                $('#hsnField').prop('required',true);
+                $('#sacField').prop('required',false);
+                $('#hsnDiv').show();
+                $('#sacDiv').hide();
+                $('#sacError').text('');
+                $('#sacField').css({'border-color':'white'});
+            }
+            else
+            {
+                $('#hsnField').val('')
+                $('#hsnField').prop('required',false);
+                $('#sacField').prop('required',true);
+                $('#sacDiv').show();
+                $('#hsnDiv').hide();
+                $('#hsnError').text('');
+                $('#hsnField').css({'border-color':'white'});
+            }
+        })
+    })
 </script>
 
 
