--- a/Finsys/Finsys_App/templates/company/Fin_Add_Item.html
+++ b/Finsys/Finsys_App/templates/company/Fin_Add_Item.html
@@ -83,7 +83,7 @@
                                 <input type="number" name="hsn" class="form-control" style="background-color: #2a4964; color: white;" placeholder="Enter a valid HSN code" required id="hsnField" oninput="validateHSN()">
                                 <div id="hsnError" style="color: red;"></div>
                             </div>
-                            <div class="col-md-6 mt-3" id="sacDiv" hidden>
+                            <div class="col-md-6 mt-3" id="sacDiv" style="display: none;">
                                 <label for="sacField" style="color: white;">SAC Code</label>
                                 <input type="number" name="sac" class="form-control" style="background-color: #2a4964; color: white;" placeholder="Enter a valid SAC code" required id="sacField" oninput="validateSAC()">
                                 <div id="sacError" style="color: red;"></div>
