--- a/Finsys/Finsys_App/templates/company/Fin_Items.html
+++ b/Finsys/Finsys_App/templates/company/Fin_Items.html
@@ -40,7 +40,7 @@
                 <a class="dropdown-item" style="height: 40px; font-size: 15px; color: white;cursor: pointer;" onclick="filterTable(7,'inactive')">Inactive</a>
               </div>
             </div>
-            <a href="{% url 'Fin_createItem' %}" class="ml-1"></i><button type="button" class="btn btn-outline-secondary text-grey"><i class="fa fa-plus font-weight-light"></i> Add Item</button></a>
+            <a href="{% url 'Fin_createItem' %}" class="ml-1"></i><button type="button" class="btn btn-outline-secondary text-grey"><i class="fa fa-plus font-weight-light"></i> Item</button></a>
           </div>
         </div>
       </div>
