--- a/Finsys/Finsys_App/templates/company/Fin_Add_Invoice.html
+++ b/Finsys/Finsys_App/templates/company/Fin_Add_Invoice.html
@@ -200,7 +200,7 @@
                             <tr>
                                 <th class="text-center">#</th>
                                 <th class="text-center">PRODUCT / SERVICE</th>
-                                <th class="text-center">HSN</th>
+                                <th class="text-center">HSN / SAC</th>
                                 <th class="text-center">QTY</th>
                                 <th class="text-center">PRICE</th>
                                 <th class="text-center">TAX (%)</th>
@@ -233,6 +233,7 @@
                                 <td>
                                     <input type="hidden" name="item_id[]" id="itemId1">
                                     <input type="text" name='hsn[]' id="hsn1" placeholder='HSN Code' class="form-control HSNCODE" style="background-color: #43596c; color: white;" readonly />
+                                    <input type="text" name='sac[]' id="sac1" placeholder='SAC Code' class="form-control HSNCODE" style="background-color: #43596c; color: white;display: none;" readonly />
                                 </td>
                                 <td >
                                     <input type="number" name='qty[]' id="qty1"  class="form-control qty mb-1" step=0 min=1 style="background-color: #43596c;margin-top: 21px; color: white;" value=0 onchange="changeItemQty(this.id)" required/>
@@ -1014,10 +1015,15 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-md-6 mt-3">
+                            <div class="col-md-6 mt-3" id="hsnDiv">
                                 <label for="hsnField" style="color: white;">HSN Code</label>
                                 <input type="number" name="hsn" class="form-control" style="background-color: #2a4964; color: white;" placeholder="Enter a valid HSN code" required id="hsnField" oninput="validateHSN()">
                                 <div id="hsnError" style="color: red;"></div>
+                            </div>
+                            <div class="col-md-6 mt-3" id="sacDiv" style="display: none;">
+                                <label for="sacField" style="color: white;">SAC Code</label>
+                                <input type="number" name="sac" class="form-control" style="background-color: #2a4964; color: white;" placeholder="Enter a valid SAC code" id="sacField" oninput="validateSAC()">
+                                <div id="sacError" style="color: red;"></div>
                             </div>
                         </div>
                         <div class="row mt-3">
@@ -1511,7 +1517,18 @@
                     if (response.status){
                         $('#'+inpId).val(value);
                         document.getElementById('itemId'+n).value = response.id;
-                        document.getElementById('hsn'+n).value = response.hsn;
+                        if( response.item_type ==='Goods')
+                        {
+                            $('#hsn'+n).show();
+                            $('#sac'+n).hide();
+                            $('#hsn'+n).val(response.hsn);
+                        }
+                        else
+                        {
+                            $('#sac'+n).show();
+                            $('#hsn'+n).hide();
+                            $('#sac'+n).val(response.sac);
+                        }
                         document.getElementById('qtyspan'+n).innerHTML = response.avl;
                         document.getElementById('avl'+n).innerHTML = response.avl;
                         document.getElementById('price'+n).value = response.sales_rate;
@@ -1769,6 +1786,7 @@ $(document).ready(function(){
             <td>
                 <input type="hidden" name="item_id[]" id="itemId${roinc}">
                 <input type="text" name='hsn[]' id="hsn${roinc}" placeholder='HSN Code' class="form-control HSNCODE" style="background-color: #43596c; color: white;" readonly />
+                <input type="text" name='sac[]' id="sac${roinc}" placeholder='SAC Code' class="form-control HSNCODE" style="background-color: #43596c; color: white;display: none;" readonly />
             </td>
             <td >
                 <input type="number" name='qty[]' id="qty${roinc}"  class="form-control qty mb-1" step=0 min=1 style="background-color: #43596c;margin-top: 21px; color: white;" value=0 onchange="changeItemQty(this.id)" required/>
@@ -2526,6 +2544,8 @@ $(document).on("click","#saveNewItem",function(){
     var type = $("#itemType").val();
     var unit = $("#itemUnit").val();
     var hsn = $("#hsnField").val();
+    var sac = $("#sacField").val();
+    var hsn_or_sac;
     if($('#inclusive').prop('checked') || $('#check').prop('checked')){
         if($('#inclusive').prop('checked')){
             var tax = 'taxable'
@@ -2537,7 +2557,28 @@ $(document).on("click","#saveNewItem",function(){
         return
     }
 
-    if (name !="" && type !="" && unit != "" && hsn != "" && tax != ""){
+    if($('#itemType').val()=== 'Goods' )
+    {
+        
+        hsn_or_sac = hsn;
+        if(!validateHSN())
+        {
+            alert('HSN must contain at least 6 digits')
+            return
+        }
+    }
+    else 
+    {
+        
+        hsn_or_sac = sac;
+        if(!validateSAC())
+        {
+            alert('SAC must contain at least 6 digits')
+            return
+        }
+    }
+
+    if (name !="" && type !="" && unit != "" && tax != ""){
         $.ajax({
             type : 'POST',
             url:"{% url 'Fin_createInvoiceItem' %}",
@@ -2546,6 +2587,7 @@ $(document).on("click","#saveNewItem",function(){
                 'type' : type,
                 'unit' : unit,
                 'hsn' : hsn,
+                'sac':sac,
                 'taxref' : tax,
                 'intra_st' : $("#intraStateTax").val(),
                 'inter_st' : $("#interStateTax").val(),
@@ -2625,6 +2667,50 @@ function reloadItems() {
         $('#createNewUnit').modal('toggle');
     }
 }
+</script>
+
+<script>
+    function validateSAC() {
+        var sacField = document.getElementById("sacField");
+        var errorText = document.getElementById("sacError");
+        var sacValue = sacField.value;
+
+        if (sacValue.length < 6) {
+            errorText.innerText = "SAC must contain at least 6 digits";
+            sacField.setCustomValidity("SAC must contain at least 6 digits");
+            sacField.style.borderColor = "red";
+            return false;
+        } else {
+            errorText.innerText = "";
+            sacField.setCustomValidity(""); 
+            sacField.style.borderColor = ""; 
+            return true;
+        }
+    }
+    $(document).ready(function(){
+        $('#itemType').on('input',function(){
+            if($(this).val()=== 'Goods' )
+            {
+                $('#sacField').val('');
+                $('#hsnField').prop('required',true);
+                $('#sacField').prop('required',false);
+                $('#hsnDiv').show();
+                $('#sacDiv').hide();
+                $('#sacError').text('');
+                $('#sacField').css({'border-color':'white'});
+            }
+            else
+            {
+                $('#hsnField').val('')
+                $('#hsnField').prop('required',false);
+                $('#sacField').prop('required',true);
+                $('#sacDiv').show();
+                $('#hsnDiv').hide();
+                $('#hsnError').text('');
+                $('#hsnField').css({'border-color':'white'});
+            }
+        })
+    })
 </script>
 
 {% endblock %}
