--- a/Finsys/Finsys_App/templates/company/Fin_Edit_Estimate.html
+++ b/Finsys/Finsys_App/templates/company/Fin_Edit_Estimate.html
@@ -1754,7 +1754,7 @@ $(document).ready(function(){
                 <input type="hidden" name="id[]" value=0>
                 <input type="hidden" name="item_id[]" id="itemId${roinc}">
                 <input type="text" name='hsn[]' id="hsn${roinc}" placeholder='HSN Code' class="form-control HSNCODE" style="background-color: #43596c; color: white;" readonly />
-                <input type="text" name='sac[]' id="sac${roinc}" placeholder='SAC Code' class="form-control SACCODE" style="background-color: #43596c; color: white;" readonly />    
+                <input type="text" name='sac[]' id="sac${roinc}" placeholder='SAC Code' class="form-control SACCODE" style="background-color: #43596c; color: white;display:none;" readonly />    
             </td>
             <td >
                 <input type="number" name='qty[]' id="qty${roinc}"  class="form-control qty" step=0 min=1 style="background-color: #43596c; color: white;" value=0 required/>
