--- a/Finsys/Finsys_App/templates/company/Fin_View_Estimate.html
+++ b/Finsys/Finsys_App/templates/company/Fin_View_Estimate.html
@@ -482,10 +482,10 @@
                                                 </div>
                 
                                                 <div class="col-md-3 mt-3 vl">
-                                                    <h6 class="mb-0">{% if itm.item_type == 'Goods' %} HSN {% else %} SAC {% endif %}</h6>
+                                                    <h6 class="mb-0">{% if itm.Item.item_type == 'Goods' %} HSN {% else %} SAC {% endif %}</h6>
                                                 </div>
                                                 <div class="col-md-3 mt-3">
-                                                    <p class="mb-0 text-right">{% if itm.hsn %}{{ itm.hsn }}{% else %}{{ itm.sac }}{% endif %}</p>
+                                                    <p class="mb-0 text-right">{% if itm.Item.item_type == 'Goods' %} {{ itm.hsn }} {% else %} {{ itm.sac }} {% endif %}</p>
                                                 </div>
                                                 
                                             </div>
