--- a/Finsys/Finsys_App/templates/company/RET_INV/RET_INV_edit.html
+++ b/Finsys/Finsys_App/templates/company/RET_INV/RET_INV_edit.html
@@ -271,7 +271,8 @@ textarea::-webkit-scrollbar-thumb:hover {
                                 <td>
                                     <input type="hidden" name="id[]" value="{{itm.id}}">
                                     <input type="hidden" name="item_id[]" value="{{itm.Item.id}}" id="itemId{{forloop.counter}}">
-                                    <input type="text" name='hsn[]' id="hsn{{forloop.counter}}" value="{{itm.HSN}}" placeholder='HSN Code' class="form-control HSNCODE" style="background-color: #43596c; color: white;" readonly />
+                                    <input type="text" name='hsn[]' id="hsn{{forloop.counter}}" value="{{itm.HSN}}" placeholder='HSN Code' class="form-control HSNCODE" style="background-color: #43596c; color: white;{% if not itm.HSN %}display:none;{% endif %}" readonly />
+                                    <input type="text" name='sac[]' id="sac{{forloop.counter}}" value="{{itm.SAC}}" placeholder='SAC Code' class="form-control SACCODE" style="background-color: #43596c; color: white;{% if not itm.SAC %}display:none;{% endif %}" readonly />
                                 </td>
                                 <td >
                                     <input type="number" name='qty[]' id="qty{{forloop.counter}}"  class="form-control qty mb-1" step=0 min=1 style="background-color: #43596c;margin-top: 21px; color: white;" value="{{itm.Quantity}}" onchange="changeItemQty(this.id,`{{itm.quantity}}`)" required/>
@@ -984,10 +985,15 @@ textarea::-webkit-scrollbar-thumb:hover {
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-md-6 mt-3">
+                            <div class="col-md-6 mt-3" id="hsnDiv">
                                 <label for="hsnField" style="color: white;">HSN Code</label>
                                 <input type="number" name="hsn" class="form-control" style="background-color: #2a4964; color: white;" placeholder="Enter a valid HSN code" required id="hsnField" oninput="validateHSN()">
                                 <div id="hsnError" style="color: red;"></div>
+                            </div>
+                            <div class="col-md-6 mt-3" id="sacDiv" style="display: none;">
+                                <label for="sacField" style="color: white;">SAC Code</label>
+                                <input type="number" name="sac" class="form-control" style="background-color: #2a4964; color: white;" placeholder="Enter a valid SAC code" id="sacField" oninput="validateSAC()">
+                                <div id="sacError" style="color: red;"></div>
                             </div>
                         </div>
                         <div class="row mt-3">
@@ -1789,6 +1795,7 @@ $(document).ready(function(){
                 <input type="hidden" name="id[]" value=0>
                 <input type="hidden" name="item_id[]" id="itemId${roinc}">
                 <input type="text" name='hsn[]' id="hsn${roinc}" placeholder='HSN Code' class="form-control HSNCODE" style="background-color: #43596c; color: white;" readonly />
+                <input type="text" name='sac[]' id="sac${roinc}" placeholder='SAC Code' class="form-control SACCODE" style="background-color: #43596c; color: white;display:none;" readonly />
             </td>
             <td >
                 <input type="number" name='qty[]' id="qty${roinc}"  class="form-control qty mb-1" step=0 min=1 style="background-color: #43596c;margin-top: 21px; color: white;" value=0 onchange="changeItemQty(this.id)" required/>
@@ -2112,6 +2119,8 @@ $(document).on("click","#saveitem",function(){
     var type = $("#itemType").val();
     var unit = $("#itemUnit").val();
     var hsn = $("#hsnField").val();
+    var sac = $("#sacField").val();
+    var hsn_or_sac;
     if($('#inclusive').prop('checked') || $('#check').prop('checked')){
         if($('#inclusive').prop('checked')){
             var tax = 'taxable'
@@ -2123,7 +2132,28 @@ $(document).on("click","#saveitem",function(){
         return
     }
 
-    if (name !="" && type !="" && unit != "" && hsn != "" && tax != ""){
+    if($('#itemType').val()=== 'Goods' )
+    {
+        
+        hsn_or_sac = hsn;
+        if(!validateHSN())
+        {
+            alert('HSN must contain at least 6 digits')
+            return
+        }
+    }
+    else 
+    {
+        
+        hsn_or_sac = sac;
+        if(!validateSAC())
+        {
+            alert('SAC must contain at least 6 digits')
+            return
+        }
+    }
+
+    if (name !="" && type !="" && unit != "" && tax != ""){
         $.ajax({
             type : 'POST',
             url:"{% url 'Fin_RETInvoiceItem' %}",
@@ -2132,6 +2162,7 @@ $(document).on("click","#saveitem",function(){
                 'type' : type,
                 'unit' : unit,
                 'hsn' : hsn,
+                'sac':sac,
                 'taxref' : tax,
                 'intra_st' : $("#intraStateTax").val(),
                 'inter_st' : $("#interStateTax").val(),
@@ -2285,7 +2316,19 @@ function getItemDetails(inpId, value) {
                 if (response.status) {
                     $('#' + inpId).val(value);
                     document.getElementById('itemId' + n).value = response.id;
-                    document.getElementById('hsn' + n).value = response.hsn;
+                    if( response.item_type ==='Goods')
+                        {
+                            $('#hsn'+n).show();
+                            $('#sac'+n).hide();
+                            $('#hsn'+n).val(response.hsn);
+                        }
+                        else
+                        {
+                            $('#sac'+n).show();
+                            $('#hsn'+n).hide();
+                            $('#sac'+n).val(response.sac);
+                        }
+                    // document.getElementById('iid' + n).value = response.id;
                     document.getElementById('qtyspan' + n).innerHTML = response.avl;
                     document.getElementById('avl' + n).innerHTML = response.avl;
                     document.getElementById('price' + n).value = response.sales_rate;
@@ -2429,6 +2472,50 @@ function calc() {
 });
 
 
+</script>
+
+<script>
+    function validateSAC() {
+        var sacField = document.getElementById("sacField");
+        var errorText = document.getElementById("sacError");
+        var sacValue = sacField.value;
+
+        if (sacValue.length < 6) {
+            errorText.innerText = "SAC must contain at least 6 digits";
+            sacField.setCustomValidity("SAC must contain at least 6 digits");
+            sacField.style.borderColor = "red";
+            return false;
+        } else {
+            errorText.innerText = "";
+            sacField.setCustomValidity(""); 
+            sacField.style.borderColor = ""; 
+            return true;
+        }
+    }
+    $(document).ready(function(){
+        $('#itemType').on('input',function(){
+            if($(this).val()=== 'Goods' )
+            {
+                $('#sacField').val('');
+                $('#hsnField').prop('required',true);
+                $('#sacField').prop('required',false);
+                $('#hsnDiv').show();
+                $('#sacDiv').hide();
+                $('#sacError').text('');
+                $('#sacField').css({'border-color':'white'});
+            }
+            else
+            {
+                $('#hsnField').val('')
+                $('#hsnField').prop('required',false);
+                $('#sacField').prop('required',true);
+                $('#sacDiv').show();
+                $('#hsnDiv').hide();
+                $('#hsnError').text('');
+                $('#hsnField').css({'border-color':'white'});
+            }
+        })
+    })
 </script>
 
 {% endblock %}
